--- a/mad-lib/base.css
+++ b/mad-lib/base.css
@@ -1,6 +1,6 @@
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
 body { font:normal 16px 'Garamond'; margin: 20px; background-color: #ddd; }
-    .wrapper { width: 100%; max-width:800px; margin: 0 auto; display: none; padding: 20px; background-color: #fff; box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);  }
+    .wrapper { width: 100%; max-width:800px; margin: 0 auto; display: none; padding:20px; background-color: #fff; box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3); }
     form { width: 100%; margin-top: 20px; }
         input { display:inline-block; width:49%; height:30px; line-height:30px; border:1px solid #ccc; padding: 0 4px; margin:2px 0; outline:0; }
         	input.red { background-color: #fde3e3; }
@@ -29,3 +29,7 @@ body { font:normal 16px 'Garamond'; margin: 20px; background-color: #ddd; }
 
     @keyframes in {from { top:-250px; } to { top:0px; } }
     @-webkit-keyframes in {from { top:-250px; } to { top:0px; } }
+    
+
+    #logo { height:116px; }
+        #logo img { -webkit-backface-visibility: visible !important; backface-visibility: visible !important; }
